--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="keywords" content="Xevy, Mumumemon">
+  <meta name="keywords" content="Xevy">
   <title>Xevy.com</title>
 </head>
 <body>
