--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <meta name="keywords" content="Xevy">
   <title>Xevy.com</title>
 </head>
-<body>
+<body style="background-color: #1434A4;">
 </body>
 </html>
